[FSAR-2 & FSAR-140] Fixing body css & react alignment

--- a/src/base.scss
+++ b/src/base.scss
@@ -12,8 +12,6 @@ body {
   @include body;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  display: flex;
-  flex-direction: column;
   background-color: var(--fsa-primary_white);
   color: var(--fsa-primary_black);
   position: relative;
