--- a/src/components/search/SortBy/sortBy.scss
+++ b/src/components/search/SortBy/sortBy.scss
@@ -3,9 +3,11 @@
 .sort {
   &__label {
     margin-right: 0.5rem;
+    display: inline-block;
   }
 
   &__select {
+    display: inline-block;
     margin-right: 0;
     font-family: var(--body-font);
     font-size: 1rem;
